<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textViewNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name"
            app:layout_constraintStart_toEndOf="@+id/textViewNameLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSurnameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/surname_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />


        <TextView
            android:id="@+id/textViewSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:text="@string/surname"
            app:layout_constraintStart_toEndOf="@id/textViewSurnameLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewBdayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/bday_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSurname" />


        <TextView
            android:id="@+id/textViewBday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/bday_text"
            app:layout_constraintStart_toEndOf="@+id/textViewBdayLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewSurname" />

        <TextView
            android:id="@+id/textViewSpecialtyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specialty_text"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBday" />

        <TextView
            android:id="@+id/textViewSpecialty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/specialty"
            app:layout_constraintStart_toEndOf="@+id/textViewSpecialtyLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewBday" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>